# bones

./: .gitattributes  Bones  CMakeLists.txt  README.md
assets/fonts/: font_site.txt
include/components/: audio.h  collider.h  health.h  input.h  physics.h  script.h  sprite.h  transform2d.h  ui.h  vec2.h
include/core/: ecs.h  engine.h  luastate.h
include/entities/: entityManager.h
include/systems/: audioSystem.h  collisionSystem.h  event.h  eventManager.h  healthSystem.h  inputSystem.h  physicsSystem.h  quadtree.h  scriptSystem.h  spriteSystem.h  uiSystem.h
src/: main.cpp
src/components/: audio.cpp  collider.cpp  health.cpp  input.cpp  physics.cpp  script.cpp  sprite.cpp  transform2d.cpp  ui.cpp  vec2.cpp
src/core/: ecs.cpp  engine.cpp  luastate.cpp
src/entities/: entityManager.cpp
src/scripts/: backButton.lua  credits.lua  creditsButton.lua  enemy.lua  enemySpawner.lua  fire.lua  fireball.lua  firenova.lua  gameOver.lua  healthBar.lua  input.lua  mainMenu.lua  map.lua  playButton.lua  player.lua  sounds.lua  textures.lua  timer.lua
src/systems/: audioSystem.cpp  collisionSystem.cpp  event.cpp  eventManager.cpp  healthSystem.cpp  inputSystem.cpp  physicsSystem.cpp  quadtree.cpp  scriptSystem.cpp  spriteSystem.cpp  uiSystem.cpp
